--- a/css/app.css
+++ b/css/app.css
@@ -1,19 +1,313 @@
 html{
     box-sizing: border-box;
+    font-size: 62.5%;/*1rem = 10px*/
 }
 *, *::before, ::after{
     box-sizing: inherit;
 }
-
+body{
+    font-family: 'Manrope', sans-serif;
+}
+/*Globales*/
+a{ 
+    text-decoration: none;
+    color: #000;
+    font-size: 1.5rem;
+}
+h1,
+h2,
+h3{
+    margin: 0;
+}
 h1{
+    font-size: 3.5rem;
+}
+h2{
+    font-size: 3rem;
+}
+h3{
+    font-size: 2.5rem;
+    margin: 0 0 5rem 0;
+}
+p{
+    font-size: 1.8rem;
+    line-height: 2;
+}
+img {
+    max-width: 100%;
+    display: block;
+}
+ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.contenedor{
+    max-width: 120rem;
+    margin: 0 auto;
+}
+.contenedor-md{
+    max-width: 60rem;
+    margin: 0 auto;
+}
+.subtitulo {
+    color: #037bc0;
+    text-align: center;
+    margin: 3rem 0;
+}
+.subtitulo span{
     color: #000;
 }
-h1 span{
-    color: #037bc0;
+.btn{
+    background-color: #fd8412;
+    color: #fff;
+    display: block;
+    text-transform: uppercase;
+    font-weight: 700;
+    padding: 1rem;
+    transition: background-color .3s ease;
+    text-align: center;
+}
+.btn:hover{
+    background-color: #eb790f;
+    cursor: pointer;
 }
 
+/*Utilidades*/
+.text-center{
+    text-align: center;
+}
+.max-width-20{
+    max-width: 20rem;
+}
+
+/*Header y navegacion*/
+.contenedor-navegacion{
+    display: flex;
+    padding: 1rem;
+    align-items: baseline;
+}
+.nav-principal{
+    display: flex;
+    justify-content:space-evenly;
+    width: 70%;
+    
+}
+.nav-principal a{
+    padding: .5rem;
+    transition: all 0s ease;
+    display: block;
+    text-align: center;
+}
+.enlace-activo,
+.nav-principal a:hover{
+    border-bottom: 2px solid #037bc0;
+}
+.nombre-sitio{
+    text-align: center;
+    color: #037bc0;
+}
+.nombre-sitio span{
+    color:#fd8412;;
+}
+
+.hero{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/principal.jpg');
+    height: 55rem;
+    display: flex;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center center;
+    padding: 1rem;
+}
+.slogan{
+    color: white;
+    width: 50%;
+    line-height: 1.5;
+    font-size: 4rem;
+    font-weight: 300;
+}
+
+
+/*Categorias*/
+.listado-categorias{
+    display: grid;
+    grid-template-columns:repeat(3, 1fr);
+    gap: 2rem;
+}
+.categoria a{
+    text-align: center;
+    display: block;
+    padding: 1rem;
+    font-size: 1.8rem;
+    transition: all .3s ease;
+    border-bottom-right-radius: 3rem;
+    border-bottom-left-radius: 3rem;
+}
+.categoria a:hover{
+    background-color: #037bc0;
+    color: #fff;
+}
+
+/*Sobre-nosotros*/
 .sobre-nosotros{
-    background-color: red;
-    width: 200px;
-    padding: 25px;
+    margin: 5rem 0;
+    background-image: linear-gradient(to right, transparent 50%, #037bc0 50%, #037bc0 100% ), url(../img/nosotros.jpg);
+    padding: 10rem 0;
+    background-repeat: no-repeat;
+    background-size: 100%, 90rem;
+    background-position: left center;
+}
+.sobre-nosotros-flex{
+    display: flex;
+    justify-content: flex-end;
+}
+.texto-nosotros{
+    flex-basis: 50%;
+    padding-left: 5rem;
+    color: #fff;
+}
+/*Listado de productos*/
+.listado-productos{
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    gap: 1rem;
+}
+.producto:nth-child(1){
+    grid-column: 1 / 7;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
+.producto:nth-child(1) img{
+    height: 47rem;
+    width: 100%;
+    object-fit: cover;
+}
+.producto:nth-child(2) img,
+.producto:nth-child(3) img{
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+}
+.producto:nth-child(2){
+    grid-column: 1 / 4;
+}
+.producto:nth-child(3){
+    grid-column: 4 / 7;
+}
+.producto:nth-child(4){
+    grid-column: 1 / 3;
+}
+.producto:nth-child(5){
+    grid-column: 3 / 5;
+}
+.producto:nth-child(6){
+    grid-column: 5 / 7;
+}
+
+.producto{
+    background-color: #037bc0;
+}
+.texto-producto{
+    color: #fff;
+    text-align: center;
+    padding: 2rem;
+}
+.texto-producto h3{
+    margin: 0.5rem 0 0 0;
+}
+.texto-producto p{
+    margin: 0 0 0.5rem 0;
+}
+.precio{
+    font-size:2.8rem;
+    font-weight: 700;
+}
+
+/*Footer*/
+
+.site-footer{
+    border-top: 1px solid #e1e1e1;
+    margin-top: 5rem;
+    padding-top: 5rem;
+}
+.site-footer h3{
+    margin-bottom: 1rem;
+}
+.grid-footer{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+}
+.footer-menu a{
+    display: block;
+    padding: .5rem;
+}
+.copyright{
+    text-align: center;
+    margin-top: 5rem;
+}
+
+/*Nosotros*/
+.contenido-nosotros{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    column-gap: 4rem;
+}
+.informacion-nosotros{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+/*Blog*/
+.contenedor-blog{
+    margin-top: 3rem;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 4rem;
+}
+
+.entrada{
+    border-bottom: 2px solid #e1e1e1;
+    padding-bottom: 4rem;
+    margin-bottom: 4rem;
+}
+.entrada:last-of-type{
+    border: none;
+}
+.entrada-meta{
+    display: flex;
+    justify-content: space-between;
+}
+.entrada-meta p{
+    font-weight: 700;
+}
+.entrada-meta span{
+    color: #fd8412;
+}
+.blog h2{
+    margin: 4rem 0;
+}
+
+/*Galeria*/
+.galeria{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+}
+
+.galeria img{
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+}
+
+.galeria li:nth-child(2){
+    grid-column: 2 / 4;
+}
+.galeria li:nth-child(6){
+    grid-column: 1 / 4;
 }
