--- a/css/app.css
+++ b/css/app.css
@@ -31,7 +31,12 @@ h3{
 }
 p{
     font-size: 1.8rem;
-    line-height: 2;
+    line-height: 1.5;
+}
+@media (min-width: 768px) {
+    p{
+        line-height: 2;
+    }
 }
 img {
     max-width: 100%;
@@ -71,30 +76,58 @@ ul{
     transition: background-color .3s ease;
     text-align: center;
     border: none;
+    width: 100%;
 }
 .btn:hover{
     background-color: #eb790f;
     cursor: pointer;
 }
-
+@media (min-width: 768px) {
+    .btn{
+        width: auto;
+    }
+}
 /*Utilidades*/
 .text-center{
     text-align: center;
 }
-.max-width-20{
-    max-width: 20rem;
+@media (min-width: 768px) {
+    .max-width-20{
+        max-width: 20rem;
+    }
 }
+
 
 /*Header y navegacion*/
 .contenedor-navegacion{
     display: flex;
     padding: 1rem;
     align-items: baseline;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+   
+}
+@media (min-width: 768px) {
+    .contenedor-navegacion{
+        flex-direction: row;
+        position: sticky;
+        top: 0;
+        background-color: #fff;
+        box-shadow: 1px 3px 5px #9e9e9e;
+    }
 }
 .nav-principal{
     display: flex;
-    justify-content:space-evenly;
-    width: 70%;
+    flex-direction: column;
+    align-items: center;
+}
+@media (min-width: 768px) {
+    .nav-principal{
+        flex-direction: row;
+        justify-content:space-evenly;
+        width: 70%;
+    }
 }
 .nav-principal a{
     padding: .5rem;
@@ -102,22 +135,29 @@ ul{
     display: block;
     text-align: center;
     font-size: 1.8rem;
+    transition: all .3s ease;
 }
-.enlace-activo,
 .nav-principal a:hover{
-    border-bottom: 2px solid #037bc0;
+    color: #037bc0;
+}
+.enlace-activo{
+    font-weight: 700;
+    color: #eb790f;
 }
 .nombre-sitio{
-    text-align: center;
     color: #037bc0;
 }
 .nombre-sitio span{
     color:#fd8412;;
 }
-
+@media (min-width: 768px) {
+    .nombre-sitio{
+        width: unset;
+    }
+}
 .hero{
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/principal.jpg');
-    height: 55rem;
+    height: 30rem;
     display: flex;
     align-items: center;
     background-repeat: no-repeat;
@@ -125,20 +165,46 @@ ul{
     background-position:center center;
     padding: 1rem;
 }
+@media (min-width: 768px) {
+    .hero{
+        height: 55rem;
+    }
+}
 .slogan{
     color: white;
-    width: 50%;
+    width: 100%;
     line-height: 1.5;
-    font-size: 4rem;
+    font-size: 2.5rem;
     font-weight: 300;
+    text-align: center;
+}
+@media (min-width: 768px) {
+    .slogan{
+        text-align: left;
+        font-size: 4rem;
+        width: 50%;
+    }
 }
 
 
 /*Categorias*/
-.listado-categorias{
-    display: grid;
-    grid-template-columns:repeat(3, 1fr);
-    gap: 2rem;
+.categoria img{
+    width: 100%;
+}
+.categoria{
+    margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+    .categoria{
+        margin-bottom: 0;
+    }
+}
+@media (min-width: 768px) {
+    .listado-categorias{
+        display: grid;
+        grid-template-columns:repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
 .categoria a{
     text-align: center;
@@ -157,61 +223,100 @@ ul{
 /*Sobre-nosotros*/
 .sobre-nosotros{
     margin: 5rem 0;
-    background-image: linear-gradient(to right, transparent 50%, #037bc0 50%, #037bc0 100% ), url(../img/nosotros.jpg);
-    padding: 10rem 0;
+    background-image: linear-gradient(to bottom, transparent 50%, #037bc0 50%, #037bc0 100% ), url(../img/nosotros.jpg);
+    background-position: center, top center ;
     background-repeat: no-repeat;
-    background-size: 100%, 100rem;
-    background-position: left center;
+    background-size: 100%, 70rem;
+    
 }
-.sobre-nosotros-flex{
-    display: flex;
-    justify-content: flex-end;
+@media (min-width: 768px) {
+    .sobre-nosotros{
+        margin: 5rem 0;
+        background-image: linear-gradient(to right, transparent 50%, #037bc0 50%, #037bc0 100% ), url(../img/nosotros.jpg);
+        padding: 10rem 0;
+        background-size: 100%, 90rem;
+        background-position: left center;
+    }
+}
+@media (min-width: 1080px) {
+    .sobre-nosotros{
+        background-size: 100%, 120rem;
+    }
+}
+.sobre-nosotros-grid{
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+}
+@media (min-width: 768px) {
+    .sobre-nosotros-grid{
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: unset;
+        column-gap: 10rem;
+    }
 }
 .texto-nosotros{
-    flex-basis: 50%;
-    padding-left: 5rem;
+    grid-row: 2 / 3;
     color: #fff;
+    padding: 5rem;
 }
+@media (min-width: 768px) {
+    .texto-nosotros{
+        grid-column: 2 / 3;
+    }
+    
+}
+
 /*Listado de productos*/
-.listado-productos{
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-    gap: 1rem;
-}
-.producto:nth-child(1){
-    grid-column: 1 / 7;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
-.producto:nth-child(1) img{
-    height: 47rem;
-    width: 100%;
-    object-fit: cover;
-}
-.producto:nth-child(2) img,
-.producto:nth-child(3) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-.producto:nth-child(2){
-    grid-column: 1 / 4;
-}
-.producto:nth-child(3){
-    grid-column: 4 / 7;
-}
-.producto:nth-child(4){
-    grid-column: 1 / 3;
-}
-.producto:nth-child(5){
-    grid-column: 3 / 5;
-}
-.producto:nth-child(6){
-    grid-column: 5 / 7;
+@media (min-width: 768px) {
+    .listado-productos{
+        display: grid;
+        grid-template-columns: repeat(6,1fr);
+        gap: 1rem;
+    }
+    .producto:nth-child(1){
+        grid-column: 1 / 7;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+    }
+    .producto:nth-child(1) img{
+        height: 55rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    .producto:nth-child(2) img,
+    .producto:nth-child(3) img{
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    .producto:nth-child(2){
+        grid-column: 1 / 4;
+    }
+    .producto:nth-child(3){
+        grid-column: 4 / 7;
+    }
+    .producto:nth-child(4){
+        grid-column: 1 / 3;
+    }
+    .producto:nth-child(5){
+        grid-column: 3 / 5;
+    }
+    .producto:nth-child(6){
+        grid-column: 5 / 7;
+    }
 }
 
 .producto{
     background-color: #037bc0;
+    margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+    .producto{
+        margin-bottom: 0;
+    }
+}
+.producto:last-of-type{
+    margin-bottom: 0;
 }
 .texto-producto{
     color: #fff;
@@ -238,19 +343,48 @@ ul{
 }
 .site-footer h3{
     margin-bottom: 1rem;
+    text-align: center;
 }
-.grid-footer{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 2rem;
+@media (min-width: 768px) {
+    .site-footer h3{
+        text-align: left;
+    }
+    .grid-footer{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        justify-items: center;
+        gap: 2rem;
+    }
+}
+.grid-footer > div {
+    margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+    .grid-footer > div {
+        margin-bottom: 0;
+    }
 }
 .footer-menu a{
     display: block;
     padding: .5rem;
+    text-align: center;
+}
+@media (min-width: 768px) {
+    .footer-menu a{
+        text-align: left;
+    }
 }
 .copyright{
     text-align: center;
+    margin: 0;
+    height: 10rem;
     margin-top: 5rem;
+    color: #fff;
+    background-color: #037bc0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
 }
 
 /*Nosotros*/
@@ -264,27 +398,48 @@ ul{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    padding: 0 1rem;
+}
+@media (min-width: 768px) {
+    .informacion-nosotros {
+        padding: 0;
+    }
 }
 
 /*Blog*/
 .contenedor-blog{
     margin-top: 3rem;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr;
     column-gap: 4rem;
+    padding: 1rem;
 }
-
+@media (min-width: 768px) {
+    .contenedor-blog{
+        grid-template-columns: 2fr 1fr;
+    }
+}
 .entrada{
     border-bottom: 2px solid #e1e1e1;
     padding-bottom: 4rem;
     margin-bottom: 4rem;
 }
+.entrada h2{
+    text-align: center;
+}
+@media (min-width: 768px) {
+    .entrada h2{
+        text-align: left;
+    }
+}
 .entrada:last-of-type{
     border: none;
 }
-.entrada-meta{
-    display: flex;
-    justify-content: space-between;
+@media (min-width: 768px) {
+    .entrada-meta{
+        display: flex;
+        justify-content: space-between;
+    }
 }
 .entrada-meta p{
     font-weight: 700;
@@ -292,29 +447,46 @@ ul{
 .entrada-meta span{
     color: #fd8412;
 }
-.blog h2{
-    margin: 4rem 0;
-}
 
+.blog h2{
+    margin-bottom: 2rem;
+}
+.aside h3{
+    margin: 0;
+}
+.entradas-lista li{
+    padding: 1rem;
+}
+.contenido-entrada-blog{
+    padding: 1rem;
+}
 /*Galeria*/
 .galeria{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 2rem;
+    padding: 1rem;
 }
-
+@media (min-width: 768px) {
+    .galeria{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 2rem;
+    }
+    .galeria li:nth-child(2){
+        grid-column: 2 / 4;
+    }
+    .galeria li:nth-child(6){
+        grid-column: 1 / 4;
+    }
+}
+.galeria li{
+    margin-bottom: 1rem;
+}
 .galeria img{
     height: 30rem;
     width: 100%;
     object-fit: cover;
 }
 
-.galeria li:nth-child(2){
-    grid-column: 2 / 4;
-}
-.galeria li:nth-child(6){
-    grid-column: 1 / 4;
-}
+
 
 /*Formulario*/
 
